--- a/Html/index.css
+++ b/Html/index.css
@@ -1,4 +1,9 @@
 ﻿/* Remove the navbar's default margin-bottom and rounded borders */
+
+#nav{  /**解決nav affix透明問題**/
+  z-index:9999;
+}
+
 .navbar {
     background-color: #FFF;
     border-bottom: 3px solid gray;
