--- a/Test XML/triMago.css
+++ b/Test XML/triMago.css
@@ -12,6 +12,10 @@
     line-height: 150px;
 }
 
+.modal {
+    z-index: 10000;
+}
+
 .navbar-header{
     width:100%;
 }
@@ -19,6 +23,17 @@
 #leftSelection{
     min-height: 1500px;
     padding-bottom: 15px;
+}
+
+.add-comment {
+    padding: 8px;
+    text-align: right;
+}
+
+.add-comment button {
+    text-align: center;
+    width: 200px;
+    height: 55px;
 }
 
 .navigationRight{
@@ -76,7 +91,8 @@ footer {
 }
 
 #searchPanel{
-    height: 189px;
+    margin-top: 15px;
+    height: auto;
     width: 100%;
     background-color: #37454D;
 }
@@ -92,14 +108,13 @@ footer {
 
 
 .dropdown button{
-    padding: 6px 80px 6px 80px;
+    width: 180px;
+    height: 40px;
 }
 
-#goToGoogleMap{
-    font-family: 微軟正黑體;
-    text-decoration:underline;
-    font-size: 25px;
-    color: #99D9EA;
+#goToGoogleMap {
+    width: 180px;
+    height: 40px;
 }
 
 .flipkart-navbar-input {
