--- a/TriMago/triMago.css
+++ b/TriMago/triMago.css
@@ -7,8 +7,13 @@
 .navbar {
     background-color: #FFF;
     border-bottom: 3px solid gray;
-    height: 135px;
-    line-height: 135px;
+    margin-bottom: 0px;
+    height: 150px;
+    line-height: 150px;
+}
+
+.modal {
+    z-index: 10000;
 }
 
 .navbar-header{
@@ -18,6 +23,17 @@
 #leftSelection{
     min-height: 1500px;
     padding-bottom: 15px;
+}
+
+.add-comment {
+    padding: 8px;
+    text-align: right;
+}
+
+.add-comment button {
+    text-align: center;
+    width: 200px;
+    height: 55px;
 }
 
 .navigationRight{
@@ -32,7 +48,7 @@
 /* Set gray background color and 100% height */
 .sidenav {
     padding-top: 20px;
-    background-color: #f1f1f1;
+    background-color: #fcfcfc;
     height: 100%;
 }
 
@@ -75,7 +91,8 @@ footer {
 }
 
 #searchPanel{
-    height: 189px;
+    margin-top: 15px;
+    height: auto;
     width: 100%;
     background-color: #37454D;
 }
@@ -91,14 +108,13 @@ footer {
 
 
 .dropdown button{
-    padding: 6px 80px 6px 80px;
+    width: 180px;
+    height: 40px;
 }
 
-#goToGoogleMap{
-    font-family: 微軟正黑體;
-    text-decoration:underline;
-    font-size: 25px;
-    color: #99D9EA;
+#goToGoogleMap {
+    width: 180px;
+    height: 40px;
 }
 
 .flipkart-navbar-input {
@@ -120,7 +136,20 @@ footer {
     cursor: pointer;
 }
 
-#restaurantList{
+.media {
+    background-color: #FDFDFD;
+    padding: 12px;
+    margin-top: 4px;
+    margin-bottom: 15px;
+}
+
+.media-body{
+    padding-top:6px;
+    padding-left:10px;
+}
+
+
+#restaurantList {
     padding-bottom: 15px;
     border-bottom: 1px solid gray;
 }
@@ -136,7 +165,7 @@ footer {
     color: #007FAD;
 }
 
-.detailsButton{
+.detailsButton {
     padding: 20px 80px 20px 80px;
     float:right;
 }
