--- a/TriMago/triMago.css
+++ b/TriMago/triMago.css
@@ -90,11 +90,12 @@ footer {
     margin:0;
 }
 
-#searchPanel{
+#searchPanel {
     margin-top: 15px;
     height: auto;
     width: 100%;
     background-color: #37454D;
+    padding: 18px;
 }
 
 #searchBar{
